--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    	<!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+    <dependency>
+    <groupId>org.apache.taglibs</groupId>
+    <artifactId>taglibs-standard-impl</artifactId>
+    <version>1.2.1</version>
+</dependency>
+		
 
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
@@ -170,11 +177,16 @@
       <version>1.4.0.RELEASE</version>
     </dependency>
 
-    <dependency>
+    <!-- <dependency>
       <groupId>com.unity.mongojdbc</groupId>
       <artifactId>mongojdbc</artifactId>
       <version>1.0</version>
-    </dependency>
+    </dependency> -->
+    <dependency>
+    <groupId>io.github.pablobastidasv</groupId>
+    <artifactId>mongojdbc-utils</artifactId>
+    <version>1.0.0</version>
+</dependency>
 
     <!-- https://mvnrepository.com/artifact/junit/junit-dep -->
     <dependency>
@@ -239,6 +251,7 @@
       <groupId>net.sf.json-lib</groupId>
       <artifactId>json-lib</artifactId>
       <version>2.4</version>
+      <classifier>jdk15</classifier>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
@@ -332,13 +345,13 @@
     </dependency>
 
     <dependency>
-      <groupId>alibaba</groupId>
+      <groupId>com.aliyun</groupId>
       <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
       <version>1.0.0</version>
     </dependency>
 
     <dependency>
-      <groupId>alibaba</groupId>
+      <groupId>com.aliyun</groupId>
       <artifactId>aliyun-java-sdk-core</artifactId>
       <version>3.3.1</version>
     </dependency>
